gramatica_final.txt
Program ::= Body

Body ::= VarDeclList StatementList

VarDeclList ::= (VarDec)*
VarDec ::= "var" Type VarList ";"
Type ::= id
VarList ::= id ("," id)*

StatementList ::= Stm (";" Stm)*
Stm ::= id "==" Exp |
        "print" "(" Exp ")" |
        "if" Exp "then" Body ["else" Body] "endif" |
        "while" Exp "do" Body "endwhile" |
        "for" id ":" Exp "," Exp "do" Body "endfor" |
        "break" |
        "continue"

Exp ::= BExp

BExp ::= CExp (("and" | "or") BExp)?

CExp ::= AExp (('<' | '>' | "==" | "!=") AExp)?

AExp ::= Term (("+" | "-") Term)*

Term ::= Factor (("*" | "/") Factor)*

FExp ::= Unary ("**" FExp)?

Unary ::= ('!' | '-')? Factor

Factor ::= num | '(' Exp ')' | id | "ifexp" '(' Exp ',' Exp ',' Exp ')'
